<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="theofanous.kendeas.grabble.grabble.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:text="@string/it_s_time_to_grabble"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        />

    <TimePicker
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:id="@+id/timePicker"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:headerBackground="?attr/actionModeSplitBackground" />

    <TextView
        android:text="@string/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="21dp"
        android:id="@+id/textView_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/timePicker"
        android:layout_toEndOf="@+id/textView_username"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editText_username"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editText_username"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_password"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/editText_username"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:text="@string/attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_password"
        android:layout_alignEnd="@+id/textView_password"
        android:layout_marginTop="35dp"
        android:id="@+id/textView_attempts" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_attempts_counter"
        android:layout_alignBaseline="@+id/textView_attempts"
        android:layout_alignBottom="@+id/textView_attempts"
        android:layout_alignStart="@+id/editText_password" />

    <Button
        android:text="Sign up"
        android:background="@color/CornflowerBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button"
        android:textAllCaps="false"
        android:layout_alignBaseline="@+id/login_button"
        android:layout_alignBottom="@+id/login_button"
        android:layout_toEndOf="@+id/login_button"
        android:layout_marginStart="40dp" />

    <Button
        android:text="Disconnect"
        android:background="@color/CornflowerBlue"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disconnect_button"
        android:layout_alignTop="@+id/sign_in_button"
        android:layout_alignStart="@+id/sign_up_button" />

    <Button
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@color/CornflowerBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginStart="46dp"
        android:layout_below="@+id/textView_attempts"
        android:layout_alignStart="@+id/textView_attempts"
        android:layout_marginTop="33dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_button"
        android:layout_toStartOf="@+id/sign_up_button"
        android:layout_marginTop="15dp" />

</RelativeLayout>
